fixed scroll bug on ios

--- a/src/scss/includes/_about.scss
+++ b/src/scss/includes/_about.scss
@@ -8,6 +8,7 @@
     scroll-snap-points-y: repeat(100vh);
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 
     .one-pager {
         position: relative;
